[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
raft = { path = "../raft" }
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
rmp-serde = "1.3.0"
tokio = { version = "1.42.0", features = ["full"] }
bincode = "1.3.3"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "chrono", "fmt"] }
