[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
raft = { path = "../raft/" }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
bincode = "1.3.3"
clap = { version = "4.5.24", features = ["derive"] }
crossbeam = "0.8.4"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "chrono", "fmt"] }
