[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
yaml-rust2 = "0.9.0"
serde = { version = "1.0.216", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.18", features = ["derive"] }
rand = "0.8.5"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "chrono", "fmt"] }
